--- a/package.json
+++ b/package.json
@@ -9,17 +9,29 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "next": "16.0.6",
+    "framer-motion": "^12.23.24",
+    "lucide-react": "^0.555.0",
+    "next": "^16.0.7",
+    "nodemailer": "^7.0.11",
+    "pg": "^8.16.3",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-dropzone": "^14.3.8",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
+    "@prisma/client": "^6.2.1",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.25",
+    "@types/nodemailer": "^7.0.4",
+    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
+    "prisma": "^6.2.1",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
